# esp32c3-embassy

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: clock.rs  http.rs  main.rs  random.rs  worldtimeapi.rs
