[package]
name = "esp32c3-embassy"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "d97e17fd", features = [
    "esp32c3",
    "panic-handler",
    "println",
    "colors",
] }

enumset = "1.1.13"
embassy-executor    = { version = "0.10.0"}
embassy-futures     = "0.1.2"
embassy-net = { version = "0.9.1", features = [ "tcp", "udp", "dhcpv4", "dns", "medium-ethernet"] }
embassy-sync        = "0.8.0"
embassy-time        = "0.5.1"
embedded-io-async   = "0.7.0"
static_cell = "2.1.1"
log = { version = "0.4.33" }
heapless = { version = "0.9.3", default-features = false }
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "d97e17fd", features = ["esp32c3", "log-04"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "d97e17fd" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "d97e17fd", features = [ "unstable", "esp32c3", "log-04"] }
esp-bootloader-esp-idf = {git = "https://github.com/esp-rs/esp-hal", rev = "d97e17fd", features = ["esp32c3", "log-04"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev = "d97e17fd", features = ["esp-radio", "embassy", "esp32c3", "log-04"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev = "d97e17fd", features = [
    "log-04",
    "wifi",
    "esp32c3",
    "unstable"
] }

reqwless = { version = "0.14.0", default-features = false }
#reqwless = { version = "0.14.0", features = ["embedded-tls", "log"] }
#reqwless = { version = "0.13.0", git = "https://github.com/drogue-iot/reqwless.git", default-features = false, features = ["esp-mbedtls", "log", "alloc"] }
#esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git",  features = ["esp32c3"] }
# Random
rand_core = "0.10.1"
# Time
time = { version = "0.3.53", default-features = false }
mpu6050-async-driver = "0.1.0"

#ieee2030_5_no_std_lib = { path = "../ieee2030_5_no_std_lib"}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
